# Whimbox

./: .gitignore  README.md  pyproject.toml
docs/protocol/: core_rpc_schema.json  mcp_adapter.md  plugin_spec.md
plugins/: __init__.py  loader.py  registry.py
plugins/demo/: main.py  plugin.json
plugins/game_nikki/: plugin.json
whimbox/: agent.py  channel_gateway.py  event_bus.py  main.py  main_old.py  mcp_agent.py  mcp_server.py  plugin_runtime.py  plugin_tools.py  rpc_method_groups.py  rpc_server.py  session_manager.py  task_adapter.py  task_manager.py  weixin_service.py
whimbox/ability/: ability.py  cvar.py
whimbox/action/: fishing.py  flourish.py  magnet.py  material_track_base.py  pickup.py
whimbox/agent_workspace/: __init__.py  context.py  memory.py  session.py  skills.py  tools.py  workspace.py
whimbox/api/: ocr_rapid.py
whimbox/assets/: checkpoints.json  default_config.json  setting_options.json
whimbox/assets/agent_workspace_template/: TOOLS.md  readme.md
whimbox/assets/agent_workspace_template/skills/dress-score/: SKILL.md
whimbox/assets/imgs/: imgs_index.json
whimbox/common/: cvars.py  handle_lib.py  keybind.py  logger.py  path_lib.py  scripts_manager.py
whimbox/common/utils/: ui_utils.py
whimbox/config/: config.py
whimbox/ingame_ui/: main_ui.py
whimbox/ingame_ui/components/: function_view.py  macro_dialog.py  path_dialog.py
whimbox/interaction/: capture.py  interaction_core.py  interaction_normal.py
whimbox/map/: map.py  track.py
whimbox/map/detection/: bigmap.py  cvars.py  map_assets.py  utils.py
whimbox/plugins/game_nikki/: main.py  plugin.json
whimbox/task/: task_template.py
whimbox/task/background_task/: background_task.py
whimbox/task/common_task/: close_game_task.py  goto_ui_task.py  start_game_task.py
whimbox/task/daily_task/: __init__.py  all_in_one_task.py  bless_task.py  dig_task_v2.py  jihua_task.py  monster_task.py  monthly_pass_task.py  weekly_realm_task.py  xinghai_run_task.py  xinghai_task.py  zhaoxi_task.py
whimbox/task/daily_task/starsea_task/: lookbook_like_task.py  place_item_task.py
whimbox/task/macro_task/: record_macro_task.py  run_macro_task.py
whimbox/task/minigame_task/: minigame_task.py
whimbox/task/mira_crown_task/: mira_crown_task.py
whimbox/task/navigation_task/: auto_path_task.py  record_path_task.py
whimbox/ui/: page_assets.py  ui.py  ui_assets.py
whimbox/view_and_move/: cvars.py  view.py
