[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whimbox"
version = "2.0.7"
description = "奇想盒-AI游戏助手"
readme = "README.md"
requires-python = "==3.12.8"
license-files = ["LICENSE"]
authors = [
    {name = "nikkigallery"}
]
keywords = ["game", "ai", "agent", "computer-vision", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
]

dependencies = [
    "fastmcp==2.12.4",
    "pynput==1.8.1",
    "langchain==1.0.2",
    "langgraph==1.0.1",
    "langchain-mcp-adapters==0.1.11",
    "langchain-community==0.4",
    "langchain-openai==1.0.1",
    "langchain-anthropic==1.0.0",
    "langchain-deepseek==1.0.0",
    "langchain-google-genai==4.0.0",
    "loguru==0.7.3",
    "onnxruntime==1.19.0",
    "PyQt5==5.15.11",
    "rapidocr==3.4.1",
    "psutil==7.1.0",
    "scipy==1.16.2",
    "win10toast==0.9",
]

[project.scripts]
whimbox = "whimbox.main:main"

[project.urls]
Homepage = "https://github.com/nikkigallery/whimbox"
Issues = "https://github.com/nikkigallery/whimbox/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["whimbox*"]

[tool.setuptools.package-data]
"whimbox.assets" = ["**/*.json", "**/*.txt", "**/*.yaml", "**/*.ico", "imgs/**/*.png", "imgs/**/*.jpg"]
"whimbox.plugins" = ["**/*.json"]

[tool.setuptools.exclude-package-data]
"*" = ["*.pyc", "__pycache__", "*.log"]
# 排除开发测试用的原始地图文件
"whimbox.assets" = ["imgs/Maps/w01_v10.png", "imgs/Maps/w14000000_v2.png", "imgs/Maps/w8000001_v1.png"]


