[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whimbox"
version = "2.2.0"
description = "奇想盒-AI游戏助手"
readme = "README.md"
requires-python = "==3.12.8"
license-files = ["LICENSE"]
authors = [
    {name = "nikkigallery"}
]
keywords = ["game", "ai", "agent", "computer-vision", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
]

dependencies = [
    "pynput==1.8.1",
    "langchain==1.2.10",
    "langgraph==1.0.10",
    "langchain-community==0.4.1",
    "langchain-openai==1.1.11",
    "langchain-anthropic==1.3.4",
    "langchain-deepseek==1.0.1",
    "langchain-google-genai==4.2.1",
    "loguru==0.7.3",
    "onnxruntime==1.19.0",
    "rapidocr==3.4.1",
    "psutil==7.1.0",
    "scipy==1.16.2",
    "win10toast==0.9",
]

[project.scripts]
whimbox = "whimbox.main:main"

[project.urls]
Homepage = "https://github.com/nikkigallery/whimbox"
Issues = "https://github.com/nikkigallery/whimbox/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["whimbox*"]

[tool.setuptools.package-data]
"whimbox.assets" = ["**/*.json", "**/*.txt", "**/*.yaml", "**/*.md", "**/*.ico", "imgs/**/*.png", "imgs/**/*.jpg"]
"whimbox.plugins" = ["**/*.json"]

[tool.setuptools.exclude-package-data]
"*" = ["*.pyc", "__pycache__", "*.log"]
# 排除开发测试用的原始地图文件
"whimbox.assets" = ["imgs/Maps/w01_v10.png", "imgs/Maps/w14000000_v2.png", "imgs/Maps/w8000001_v1.png"]


